# ECE464_DATABASES

./: README.md
sailors/: README.md  create_sailors_orm.py  requirements.txt  test_extended_sailors_orm.py  test_sailors_orm.py  test_sailors_orm_async.py
sailors/extended_orm_part3/: extended_create_sailors_orm.py  reports.py
scrapers/myscraper/: README.md  explore_data.py  format_counts.json  main.py  main2.py  pyproject.toml  queries.md  queries.py  tables.py  tag_counts.json
